# maze-algorithm-visualization

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
.github/workflows/: windows-build.yml
docs/: UML.mdj
include/glog/: export.h  logging.h
resource/: resource.qrc
src/Algorithm/include/: GraphPath.h  MazeGenerator.h
src/Algorithm/src/: GraphPath.cpp  MazeGenerator.cpp
src/Backend/include/: AdjacencyList.h  CircularlyLinkList.h  CircularlyLinkList.hpp  Config.h  LimitedSequentialStructure.h  LimitedSequentialStructure.hpp  MazeMap.h  PriorityQueue.hpp  QGlog.h  Queue.hpp  QueueStructure.hpp  SequentialStack.hpp  SequentialStructure.h  SequentialStructure.hpp  Stack.h  Stack.hpp  StackStructure.hpp  Utils.h
src/Backend/src/: AdjacencyList.cpp  Config.cpp  MazeMap.cpp  QGlog.cpp  Utils.cpp
src/BmpFile/include/: BmpImage.h  BmpImage.hpp  BmpImage1Bit.h  BmpImage24Bit.h  BmpImage8Bit.h  BmpStruct.h
src/BmpFile/src/: BmpImage.cpp  BmpImage1Bit.cpp  BmpImage24Bit.cpp  BmpImage8Bit.cpp
src/Factory/include/: BmpFactory.h
src/Factory/src/: BmpFactory.cpp
src/Qt/include/: ConfigWidget.h  GenerateDisplay.h  GenerateMaze.h  ImageDisplay.h  MainWindow.h  SelectColor.h  WidgetDisplay.h
src/Qt/src/: ConfigWidget.cpp  GenerateDisplay.cpp  GenerateMaze.cpp  ImageDisplay.cpp  MainWindow.cpp  SelectColor.cpp  WidgetDisplay.cpp
src/Qt/ui/: ConfigWidget.ui  GenerateDisplay.ui  GenerateMaze.ui  ImageDisplay.ui  MainWindow.ui  SelectColor.ui
src/Thread/include/: BfsThread.h  DFSThread.h  DfsThread.h  GenerateThread.h  SearchThread.h  Thread.h
src/Thread/src/: BfsThread.cpp  DfsThread.cpp  GenerateThread.cpp  SearchThread.cpp  Thread.cpp
src/include/: BmpDefinition.h  BmpStruct.h  ConfigDefinition.h  Definition.h  LinkNodes.h  TimeDefinition.h
